# GAT

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
config/: fees.yaml
config/research/: predicate_specs.yaml  strategy_fees.yaml
scripts/: __init__.py  build_decision_bars.py  convert_monthly_csv_to_parquet.py  full_run_pipeline.py  full_run_pipeline.py.bak  nightly_motif_commands.sh  nightly_motif_mining.py  run_classifier.py  run_evaluation.py  run_execution_simulation.py  run_feature_pipeline.py  run_full_batch.py  run_full_window.py  run_gp_search.py  run_ingestion.py  run_monte_carlo.py  run_motif_mining.py  run_research_pipeline.py  run_research_pipeline_from_parquet.py  run_synthetic_guardrail.py
scripts/analysis/: aggregate_mcpt.py  build_mcpt_scorecard.py  build_prototypes.py  nightly_pipeline.sh
shards/: shard_1.txt  shard_2.txt  shard_3.txt  shard_4.txt
src/candlestrats/: __init__.py  config.py
src/candlestrats/dsl/: __init__.py  (+3 more)
tests/: conftest.py
tests/bars/: test_information_bars.py
tests/classifiers/: test_candlestick_state.py
tests/cluster/: test_embeddings.py
tests/dsl/: test_dsl.py  test_predicates.py  test_sequences.py
tests/evaluation/: test_costs.py  test_cpcv.py  test_fees.py  test_metrics.py  test_report.py
tests/features/: test_morphology.py  test_motifs.py  test_registry.py
tests/gp/: test_dsl_integration.py  test_evaluation.py  test_miner.py
tests/labeling/: test_triple_barrier.py
tests/motifs/: test_frequent.py  test_pipeline.py
tests/pipeline/: test_end_to_end.py
tests/portfolio/: test_ensemble.py
(+41 files in other folders)
