[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "candlestrats"
version = "0.1.0"
description = "Mid-frequency candlestick strategy research scaffold"
authors = [{name = "Gaen Research"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
